yaml/transformer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "${TRANSFORMER_NAME}"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "${TRANSFORMER_NAME}"
  template:
    metadata:
      labels:
        app: "${TRANSFORMER_NAME}"
    spec:
      serviceAccountName: "${TRANSFORMER_SERVICE_ACCOUNT_NAME}"
      containers:
        - name: "${TRANSFORMER_NAME}"
          image: "${TRANSFORMER_IMAGE}"
          ports:
            - containerPort: ${TRANSFORMER_PORT}
              protocol: TCP
          volumeMounts:
      volumes:
        - name: "${TRANSFORMER_NAME}-vol"
          persistentVolumeClaim:
            claimName: "${TRANSFORMER_NAME}-pvc"
