yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "${TRANSFORMER_NAME}"
  labels:
    app:  "${TRANSFORMER_NAME}"
spec:
  type: NodePort
  ports:
    - name: http
      port: ${TRANSFORMER_PORT}
      targetPort: ${TRANSFORMER_PORT}
      protocol: TCP
  selector:
    app:  "${TRANSFORMER_NAME}"
